tests/bad/duplicate_label.s
.name "coucou"
.comment "coucou"

label:
label:
    live %1
